Schwerpunktseite Direktionsseite Bugfixes für spacings

--- a/src/atoms/headings/headings.scss
+++ b/src/atoms/headings/headings.scss
@@ -4,8 +4,8 @@ $headingCurves: (
     large: $sizeRegular,
   ),
   borderedTopMargin: (
-    tiny: $sizeBiggerBig,
-    large: $sizeHuge,
+    tiny: $sizeHuge,
+    large: $sizeGiant,
   ),
 );
 
