--- a/src/modules/contact/contact.scss
+++ b/src/modules/contact/contact.scss
@@ -4,7 +4,7 @@
   padding: pxToRem($sizeLarge) pxToRem($sizeSmallRegular);
 
   &--fullwidth {
-    @include gridBleed;
+    @include gridBleed($fullwidth: true);
     padding: $sizeHuge 0;
   }
 
