--- a/src/modules/content_nav/content_nav.scss
+++ b/src/modules/content_nav/content_nav.scss
@@ -5,12 +5,8 @@ $contentNavGrid: (
 );
 
 .mdl-content_nav {
-  @include polyFluidSizing('padding-top', map-get($sizeCurves, big));
+  // @include polyFluidSizing('padding-top', map-get($sizeCurves, big));
   @include polyFluidSizing('margin-bottom', map-get($sizeCurves, big));
-
-  h2.atm-heading--bordered {
-    margin-top: 0;
-  }
 
   &__list {
     display: grid;
